Update HTML buttons

--- a/Code/Front/templates/home.html
+++ b/Code/Front/templates/home.html
@@ -48,7 +48,7 @@
         <p class="lead">Discover your ideal job with the power of AI</p>
         <hr class="my-4">
         <p>Our advanced algorithms analyze your CV and recommend the best job opportunities tailored just for you.</p>
-        <a class="btn btn-primary btn-lg" href="input.html" role="button">Get Started</a>
+        <a class="btn btn-primary btn-lg" href="input" role="button">Get Started</a>
     </div>
 
     <!-- Features -->
