--- a/Code/Front/templates/input.html
+++ b/Code/Front/templates/input.html
@@ -33,7 +33,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="results">Home</a>
                 </li>
             </ul>
         </div>
@@ -49,7 +49,7 @@
 
     <!-- Upload Section -->
     <div class="container upload-section">
-        <form action="/upload" method="post" enctype="multipart/form-data">
+        <form action="/results" method="post" enctype="multipart/form-data">
             <div class="form-group">
                 <input type="file" class="form-control-file" id="cvUpload" name="cvUpload" accept=".pdf">
             </div>
