--- a/Code/Front/templates/results.html
+++ b/Code/Front/templates/results.html
@@ -41,7 +41,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="home">Home</a>
                 </li>
             </ul>
         </div>
@@ -60,7 +60,7 @@
             <li><strong>{{ key }}:</strong> {{ value }}</li>
             {% endfor %}
         </ul>
-        <a href="home.html" class="btn btn-primary btn-lg">Back to Home Page</a>
+        <a href="home" class="btn btn-primary btn-lg">Back to Home Page</a>
     </div>
 
     <!-- Footer -->
