changes in app and back and all html

--- a/Code/Front/templates/home.html
+++ b/Code/Front/templates/home.html
@@ -36,7 +36,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="input.html">Input Page</a>
+                    <a class="nav-link" href="input">Input Page</a>
                 </li>
             </ul>
         </div>
