--- a/Code/Front/templates/input.html
+++ b/Code/Front/templates/input.html
@@ -33,7 +33,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="results">Home</a>
+                    <a class="nav-link" href="home">Home</a>
                 </li>
             </ul>
         </div>
@@ -49,12 +49,10 @@
 
     <!-- Upload Section -->
     <div class="container upload-section">
-        <form action="/results" method="post" enctype="multipart/form-data">
-            <div class="form-group">
-                <input type="file" class="form-control-file" id="cvUpload" name="cvUpload" accept=".pdf">
-            </div>
-            <button type="submit" class="btn btn-primary btn-lg">Upload CV</button>
-        </form>
+        <form action="/input" method="post" enctype="multipart/form-data">
+            <input type="file" name="file" />
+            <input type="submit" value="Upload">
+        </form>   
     </div>
 
     <!-- Footer -->
