--- a/Code/templates/home.html
+++ b/Code/templates/home.html
@@ -172,7 +172,7 @@
     <div class="jumbotron">
         <h1 class="display-4 animated fadeInUp">Welcome to JobFinderAI</h1>
         <p class="lead animated fadeInUp delay-1s">Discover your ideal job with the power of AI.</p>
-        <img src="Images/home page photo.JPG" alt="JobFinderAI" class="animated fadeInUp delay-2s">
+        <img src="Images/home_page_photo.JPG" alt="JobFinderAI" class="animated fadeInUp delay-2s">
         <hr class="my-4">
         <p>Our advanced algorithms analyze your CV and recommend the best job opportunities tailored just for you.</p>
         <a class="btn btn-primary animated fadeInUp delay-3s" href="input" role="button">Get Started</a>
