--- a/Code/templates/input.html
+++ b/Code/templates/input.html
@@ -87,14 +87,14 @@
 <body>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#"><img src="Images/koci logo.JPG" alt="JobFinderAI Logo"></a>
+        <img src="{{ url_for('static', filename='Images/koci logo.JPG') }}" alt="Kochi Logo">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="home">Home</a>
+                    <a class="nav-link" href="{{ url_for('home') }}">Home</a>
                 </li>
             </ul>
         </div>
